--- a/project/src/main/webapp/index.html
+++ b/project/src/main/webapp/index.html
@@ -3,7 +3,7 @@
     <title>Welcome to Continous Integration with Jenkins in AWS Yottabyte session</title>
   </head>
   <body bgcolor=white>
-
+<!-- Code change -->
     <table border="0" cellpadding="10">
       <tr>
         <td>
@@ -17,4 +17,4 @@
 
     <p>This session is to demonstrate how to setup simple pipeline </p>
   </body>
-</html>
+</html> 
